--- a/src/app/shared/components/error.component.html
+++ b/src/app/shared/components/error.component.html
@@ -13,8 +13,7 @@
           <div class="uk-card uk-card-primary uk-card-body">
             <h3 class="uk-card-title">What is this page</h3>
             <p>
-              Sometimes things go wrong and you get lost, the content you
-              are trying to see does not exist or is no longer visible. Please
+              Sometimes things go wrong and you get lost, the content you are trying to see does not exist or is no longer visible. Please
               contact the administrator if you belive it's an error.
             </p>
           </div>
