--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -1,76 +1,76 @@
 <storaji-navbar></storaji-navbar>
 <div class="content-background">
-   <div class="uk-section-small">
-      <div class="uk-container uk-container-large">
-         <div uk-grid class="uk-child-width-1-1@s uk-child-width-2-3@l">
-            <div class="uk-width-1-1@s uk-width-1-4@l uk-width-1-3@xl"></div>
-            <div class="uk-width-1-1@s uk-width-1-2@l uk-width-1-3@xl">
-               <div class="uk-card uk-card-default">
-                  <div class="uk-card-header">
-                     <div class="uk-child-width-1-2" uk-grid>
-                        <div class="uk-flex uk-flex-middle">
-                          {{ 'module.title.login' | translate }}
-                        </div>
-                        <div class="uk-text-right">
-                          <button class="uk-button uk-button-link" type="button">
-                            <span uk-icon="icon: settings; ratio: 1.3"></span>
-                          </button>
-                          <div uk-dropdown="mode: click;pos: bottom-right">
-                              <ul class="uk-nav uk-dropdown-nav">
-                                  <li *ngFor="let lang of translate.getLangs()"
-                                      class="{{ (translate.currentLang === lang) ? 'uk-active' : null }}"
-                                      [style.display]="(lang === '_i18n') ? 'none' : null">
-                                    <a (click)="onChangeLanguage(lang)">
-                                      {{ lang | translate }}
-                                    </a>
-                                  </li>
-                              </ul>
-                          </div>
-                        </div>
-                     </div>
+  <div class="uk-section-small">
+    <div class="uk-container uk-container-large">
+      <div uk-grid class="uk-child-width-1-1@s uk-child-width-2-3@l">
+        <div class="uk-width-1-1@s uk-width-1-4@l uk-width-1-3@xl"></div>
+        <div class="uk-width-1-1@s uk-width-1-2@l uk-width-1-3@xl">
+          <div class="uk-card uk-card-default">
+            <div class="uk-card-header">
+              <div class="uk-child-width-1-2" uk-grid>
+                <div class="uk-flex uk-flex-middle">
+                  {{ 'module.title.login' | translate }}
+                </div>
+                <div class="uk-text-right">
+                  <button class="uk-button uk-button-link" type="button">
+                    <span uk-icon="icon: settings; ratio: 1.3"></span>
+                  </button>
+                  <div uk-dropdown="mode: click;pos: bottom-right">
+                    <ul class="uk-nav uk-dropdown-nav">
+                      <li *ngFor="let lang of translate.getLangs()" class="{{ (translate.currentLang === lang) ? 'uk-active' : null }}" [style.display]="(lang === '_i18n') ? 'none' : null">
+                        <a (click)="onChangeLanguage(lang)">
+                          {{ lang | translate }}
+                        </a>
+                      </li>
+                    </ul>
                   </div>
-                  <div class="uk-card-body">
-                    <h2 class="uk-text-center uk-text-uppercase uk-margin-small-bottom">{{app.name}}</h2>
-                    <h5 class="uk-text-center uk-text-uppercase uk-margin-small-top">{{ 'intro' | translate }}</h5>
-                    <br />
-                     <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
-                        <fieldset class="uk-fieldset">
-                           <div class="uk-margin">
-                              <div class="uk-position-relative">
-                                 <span class="uk-form-icon ion-android-person"></span>
-                                 <input class="uk-input" name="email" type="email" placeholder="{{ 'form.placeholder.email' | translate }}" [(ngModel)]="credentials.email" #email="ngModel">
-                              </div>
-                           </div>
-                           <div class="uk-margin">
-                              <div class="uk-position-relative">
-                                 <span class="uk-form-icon ion-locked"></span>
-                                 <input class="uk-input" name="password" type="password" placeholder="{{ 'form.placeholder.password' | translate }}" [(ngModel)]="credentials.password" #password="ngModel">
-                              </div>
-                           </div>
-                           <div class="uk-margin">
-                              <a routerLink="/">{{ 'text.forgot-password' | translate }}</a>
-                           </div>
-                           <div class="uk-margin">
-                              <button type="submit" class="uk-button uk-button-primary">
-                                <span class="ion-forward"></span>&nbsp; {{ 'module.title.login' | translate }}
-                              </button>
-                           </div>
-                           <hr />
-                           <div style="text-align:center;">
-                              <p>
-                                 {{ 'text.has-no-account' | translate }}
-                              </p>
-                              <a routerLink="/register" class="uk-button uk-button-default">
-                              <span class="ion-android-person-add"></span>&nbsp; {{ 'module.title.register' | translate }}
-                              </a>
-                           </div>
-                        </fieldset>
-                     </form>
-                  </div>
-               </div>
+                </div>
+              </div>
             </div>
-            <div class="uk-width-1-1@s uk-width-1-4@l uk-width-1-3@xl"></div>
-         </div>
+            <div class="uk-card-body">
+              <h2 class="uk-text-center uk-text-uppercase uk-margin-small-bottom">{{app.name}}</h2>
+              <h5 class="uk-text-center uk-text-uppercase uk-margin-small-top">{{ 'intro' | translate }}</h5>
+              <br />
+              <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+                <fieldset class="uk-fieldset">
+                  <div class="uk-margin">
+                    <div class="uk-position-relative">
+                      <span class="uk-form-icon ion-android-person"></span>
+                      <input class="uk-input" name="email" type="email" placeholder="{{ 'form.placeholder.email' | translate }}" [(ngModel)]="credentials.email"
+                        #email="ngModel">
+                    </div>
+                  </div>
+                  <div class="uk-margin">
+                    <div class="uk-position-relative">
+                      <span class="uk-form-icon ion-locked"></span>
+                      <input class="uk-input" name="password" type="password" placeholder="{{ 'form.placeholder.password' | translate }}" [(ngModel)]="credentials.password"
+                        #password="ngModel">
+                    </div>
+                  </div>
+                  <div class="uk-margin">
+                    <a routerLink="/">{{ 'text.forgot-password' | translate }}</a>
+                  </div>
+                  <div class="uk-margin">
+                    <button type="submit" class="uk-button uk-button-primary">
+                      <span class="ion-forward"></span>&nbsp; {{ 'module.title.login' | translate }}
+                    </button>
+                  </div>
+                  <hr />
+                  <div style="text-align:center;">
+                    <p>
+                      {{ 'text.has-no-account' | translate }}
+                    </p>
+                    <a routerLink="/register" class="uk-button uk-button-default">
+                      <span class="ion-android-person-add"></span>&nbsp; {{ 'module.title.register' | translate }}
+                    </a>
+                  </div>
+                </fieldset>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="uk-width-1-1@s uk-width-1-4@l uk-width-1-3@xl"></div>
       </div>
-   </div>
+    </div>
+  </div>
 </div>
