--- a/src/app/main/orders/report/report.component.html
+++ b/src/app/main/orders/report/report.component.html
@@ -6,8 +6,7 @@
       <storaji-orders-filter (update)="onUpdate($event)"></storaji-orders-filter>
       <div class="uk-card uk-card-default uk-card-body" customers-table>
         <div class="uk-display-block uk-text-right">
-          <button class="uk-button uk-button-primary" type="button" (click)="save()"
-                  [disabled]="!orders">{{ 'form.button.save-as-pdf' | translate }}</button>
+          <button class="uk-button uk-button-primary" type="button" (click)="save()" [disabled]="!orders">{{ 'form.button.save-as-pdf' | translate }}</button>
         </div>
         <table class="uk-table uk-table-justify uk-table-divider">
           <thead>
